cmake_minimum_required(VERSION 3.10)
#set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(CPP_Basic)

#set(CMAKE_CXX_STANDARD 11)

# Add executables for each .cpp file in subfolders
add_executable(fstream      fstream/fstream.cpp)
add_executable(iomanip      iomanip/iomanip.cpp)
add_executable(iostream     iostream/iostream.cpp)
add_executable(sstream      sstream/sstream.cpp)
add_executable(algorithm    algorithm/algorithm.cpp)
add_executable(array        array/array.cpp)
add_executable(chrono       chrono/chrono.cpp)
add_executable(cmath        cmath/cmath.cpp)
add_executable(deque        deque/deque.cpp)
add_executable(functional   functional/functional.cpp)
add_executable(list         list/list.cpp)
add_executable(map          map/map.cpp)
add_executable(memory       memory/memory.cpp)
add_executable(mutex        mutex/mutex.cpp)
add_executable(numeric      numeric/numeric.cpp)
add_executable(optional     optional/optional.cpp)
add_executable(queue        queue/queue.cpp)
add_executable(random       random/random.cpp)
add_executable(set          set/set.cpp)
add_executable(stack        stack/stack.cpp)
add_executable(string       string/string.cpp)
add_executable(thread       thread/thread.cpp)
add_executable(unordered_map      unordered_map/unordered_map.cpp)
add_executable(unordered_set      unordered_set/unordered_set.cpp)
add_executable(utility      utility/utility.cpp)
add_executable(vector       vector/vector.cpp)


